--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Turistic Places</title>
 </head>
 <body>
-    
+    <ul>
+        <h3>cathedral of burgos</h3>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkvzo3NhdWcuv0e0pkNnuiCFRPEtlNpNp7bQ&s" height="600">
+        </div>
+        <h3>mount rushmore</h3>
+        <div>
+            
+        </div>
+    </ul>
 </body>
 </html>
