--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
         <div>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkvzo3NhdWcuv0e0pkNnuiCFRPEtlNpNp7bQ&s" height="600">
         </div>
+        <p>he Cathedral construction began in 1221 and was completed in 1567. It is a comprehensive example of the evolution of Gothic style, with the entire history of Gothic art exhibited in its superb architecture and unique collection of art, including paintings, choir stalls, reredos, tombs, and stained-glass windows.</p>
         <h3>mount rushmore</h3>
         <div>
-            
+            <img src="https://www.travelandleisure.com/thmb/1lfne5N2_v1T59w_F1U3uKNtVlM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/mount-rushmore-south-dakota-RUSHMORE0317-10c603a0e75e44a9a04ee36457095990.jpg" height="600">
         </div>
+        <p></p>
+        <h3></h3>
     </ul>
 </body>
 </html>
