--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div>
             <img src="https://www.travelandleisure.com/thmb/1lfne5N2_v1T59w_F1U3uKNtVlM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/mount-rushmore-south-dakota-RUSHMORE0317-10c603a0e75e44a9a04ee36457095990.jpg" height="600">
         </div>
-        <p></p>
-        <h3></h3>
+        <p>They come to marvel at the majestic beauty of the Black Hills of South Dakota and to learn about the birth, growth, development and the preservation of our country. Over the decades, Mount Rushmore has grown in fame as a symbol of America-a symbol of freedom and hope for people from all cultures and backgrounds</p>
+        <h3>the sphinx</h3>
     </ul>
 </body>
 </html>
