--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         </div>
         <p>They come to marvel at the majestic beauty of the Black Hills of South Dakota and to learn about the birth, growth, development and the preservation of our country. Over the decades, Mount Rushmore has grown in fame as a symbol of America-a symbol of freedom and hope for people from all cultures and backgrounds</p>
         <h3>the sphinx</h3>
+        <div>
+            <img src="https://cdn.britannica.com/85/99185-050-E1110E5C/Great-Sphinx-Giza-Egypt.jpg" height="600">
+        <p>the Great Sphinx is an opportunity to experience a piece of history. The Great Sphinx was built around 2500 BC during the reign of Pharaoh Khafre. It stands as a testament to ancient Egyptian culture and engineering prowess.</p>
+        </div>
     </ul>
 </body>
 </html>
