--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <img src="https://cdn.britannica.com/85/99185-050-E1110E5C/Great-Sphinx-Giza-Egypt.jpg" height="600">
         <p>the Great Sphinx is an opportunity to experience a piece of history. The Great Sphinx was built around 2500 BC during the reign of Pharaoh Khafre. It stands as a testament to ancient Egyptian culture and engineering prowess.</p>
         </div>
+        <h3>christ the redeemer</h3>
     </ul>
 </body>
 </html>
