--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <p>the Great Sphinx is an opportunity to experience a piece of history. The Great Sphinx was built around 2500 BC during the reign of Pharaoh Khafre. It stands as a testament to ancient Egyptian culture and engineering prowess.</p>
         </div>
         <h3>christ the redeemer</h3>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMCUGVHs0JRG26RxhfnAKCLY5nhA0wiU0-sQ&s" height="600">
+        <p>Christ the Redeemer is a masterpiece which expresses the feeling and the blessing of the Brazilian people, fitting perfectly to the landscape. The monument was conceived as an expression of the divinity of Jesus Christ and the unsearchable riches of his Paschal Mystery.</p>
+        </div>
     </ul>
 </body>
 </html>
