--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div>
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSkvzo3NhdWcuv0e0pkNnuiCFRPEtlNpNp7bQ&s" height="600">
         </div>
-        <p>he Cathedral construction began in 1221 and was completed in 1567. It is a comprehensive example of the evolution of Gothic style, with the entire history of Gothic art exhibited in its superb architecture and unique collection of art, including paintings, choir stalls, reredos, tombs, and stained-glass windows.</p>
+        <p>the Cathedral construction began in 1221 and was completed in 1567. It is a comprehensive example of the evolution of Gothic style, with the entire history of Gothic art exhibited in its superb architecture and unique collection of art, including paintings, choir stalls, reredos, tombs, and stained-glass windows.</p>
         <h3>mount rushmore</h3>
         <div>
             <img src="https://www.travelandleisure.com/thmb/1lfne5N2_v1T59w_F1U3uKNtVlM=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/mount-rushmore-south-dakota-RUSHMORE0317-10c603a0e75e44a9a04ee36457095990.jpg" height="600">
         </div>
-        <p>They come to marvel at the majestic beauty of the Black Hills of South Dakota and to learn about the birth, growth, development and the preservation of our country. Over the decades, Mount Rushmore has grown in fame as a symbol of America-a symbol of freedom and hope for people from all cultures and backgrounds</p>
+        <p>They come to marvel at the majestic beauty of the Black Hills of South Dakota and to learn about the birth, growth, development and the preservation of the american country. Over the decades, Mount Rushmore has grown in fame as a symbol of America-a symbol of freedom and hope for people from all cultures and backgrounds</p>
         <h3>the sphinx</h3>
         <div>
             <img src="https://cdn.britannica.com/85/99185-050-E1110E5C/Great-Sphinx-Giza-Egypt.jpg" height="600">
@@ -27,6 +27,7 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMCUGVHs0JRG26RxhfnAKCLY5nhA0wiU0-sQ&s" height="600">
         <p>Christ the Redeemer is a masterpiece which expresses the feeling and the blessing of the Brazilian people, fitting perfectly to the landscape. The monument was conceived as an expression of the divinity of Jesus Christ and the unsearchable riches of his Paschal Mystery.</p>
         </div>
+        <h3>The statue of Hachikō0</h3>
     </ul>
 </body>
 </html>
