--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <p>Christ the Redeemer is a masterpiece which expresses the feeling and the blessing of the Brazilian people, fitting perfectly to the landscape. The monument was conceived as an expression of the divinity of Jesus Christ and the unsearchable riches of his Paschal Mystery.</p>
         </div>
         <h3>The statue of Hachikō0</h3>
+        <div>
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlzugR_Oi82ByVkpDNXwafKQjADgKmxj4L4A&s" height="600">
+        </div>
     </ul>
 </body>
 </html>
