--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMCUGVHs0JRG26RxhfnAKCLY5nhA0wiU0-sQ&s" height="600">
         <p>Christ the Redeemer is a masterpiece which expresses the feeling and the blessing of the Brazilian people, fitting perfectly to the landscape. The monument was conceived as an expression of the divinity of Jesus Christ and the unsearchable riches of his Paschal Mystery.</p>
         </div>
-        <h3>The statue of Hachikō0</h3>
+        <h3>shibuya</h3>
         <div>
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlzugR_Oi82ByVkpDNXwafKQjADgKmxj4L4A&s" height="600">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEAvmdnritwSIYt4tNhC1CVqm_L_ltNft0nA&s" height="600">
         </div>
+        <p>Shibuya is an area located in the heart of Tokyo, Japan's capital, and is highly popular both domestically and internationally as a trendsetting hotspot. The area around Shibuya Station is particularly known as a hub for youth culture, offering a wide range of experiences in fashion, music, art, and gourmet food</p>
     </ul>
 </body>
 </html>
